--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.9, <3.10"
 dependencies = [
     "numpy>=2.0.2",
     "pybullet-mm>=3.2.7.post0",
-    "google-generativeai>=0.8.0",
     "pillow>=10.0.0",
     "scipy>=1.13.0",
+    "google-genai>=1.47.0",
 ]
